# doc-index-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
demo/: .mcp-local.json  .mcp.json
src/: __init__.py  install_skill.py  server.py  validation.py
src/services/: __init__.py  boundary_detector.py  chunker.py  document_loader.py  embedder.py  table_extractor.py  text_search.py  vector_store.py
src/skills/doc-search/: SKILL.md
src/skills/knowledge-search/: SKILL.md
src/tests/: __init__.py  test_boundary_detector.py  test_chunker.py  test_content_tool.py  test_document_loader.py  test_search_boundaries.py  test_table_extractor.py  test_text_search.py  test_toc_tool.py  test_vector_store.py
src/tools/: __init__.py  content_tool.py  search_tool.py  toc_tool.py
tests/: bench_providers.py  conftest.py  download_fixtures.py  test_economic_report.py  test_nist_800_53.py  test_nist_csf.py  test_toc_and_content.py
